samples/_failures_safe/1761451323_6aa421_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_923906cb.c: In function ‘main’:
./samples/SAFE/__tmp_923906cb.c:140:5: error: expected declaration or statement at end of input
  140 |     printf("Second matrix:\n");
      |     ^~~~~~
